# hero-social-network

./: .gitignore  CMakeLists.txt  LEIAME.txt  README.md  main.cpp
assets/: config.ini
cmake/: FindSDL2.cmake
include/: Config.cpp  Config.hpp  Drawable.hpp  FontAtlas.hpp  Graph.hpp  Graphics.hpp  Line.hpp  Scene.hpp  Shader.hpp  Text.hpp  Triangle.hpp  dbg.hpp  utils.hpp
scripts/: normaliza.py
shaders/: primitive.fs.glsl  primitive.vs.glsl  text.fs.glsl  text.vs.glsl  trig.vs.glsl
src/: Config.cpp  Drawable.cpp  FontAtlas.cpp  Graph.cpp  Graphics.cpp  Line.cpp  Scene.cpp  Shader.cpp  Text.cpp  Triangle.cpp
